sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:5: error: '=' expected but ';' found.
  var e = getValeur(0)
^