sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var v = 0
  var a
  var e = getValeur(0)
  for(j<-1 to getNombreValeurs-1){
  	for(i<-j to getNombreValeurs-1){
    	v=getValeur(i)
    	if (v<e){
      	e=v
      	a=i
    	}
  	}
  	echange(a,j)
	}
}